--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="locobasic.css">
-  <title>LocoBasic v0.1.37</title>
+  <title>LocoBasic v0.1.42</title>
 </head>
 
 <body>
@@ -28,12 +28,13 @@
     <input id="autoExecuteInput" type="checkbox" title="automatic execute" checked>
     <label for="autoExecuteInput" title="auto execute on change">Auto</label>
     <button id="executeButton" title="Execute JavaScript">Execute</button>
+    <button id="stopButton" title="Stop Execution">Stop</button>
   </div>
 
   <div id="outputArea" class="flexBox">
     <label for="outputText" title="output">Output</label>
     <br />
-    <pre id="outputText" style="overflow:auto; width: 604px; height: 30em; margin: 0px; background-color: #ffffff"></pre>
+    <pre id="outputText" contenteditable="true" spellcheck="false" autocomplete="off" autocapitalize="off" style="overflow:auto; width: 604px; height: 30em; margin: 0px; background-color: #ffffff"></pre>
     <!-- <textarea id="outputText" rows="25" cols="80" spellcheck="false" autocomplete="off" autocapitalize="off" tabindex="0"></textarea> -->
   </div>
 
