--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="locobasic.css">
-  <title>LocoBasic v0.1.44</title>
+  <title>LocoBasic v0.1.46</title>
 </head>
 
 <body>
   <div id="basicArea" class="flexBox">
-    <label for="basicText" title="BASIC input">BASIC</label>
+    <label for="basicEditor" title="LocoBasic input">LocoBasic</label>
     <select id="exampleSelect" title="Load Example"></select>
     <button id="helpButton" title="Help">Help</button>
     <br /> 
-    <textarea id="basicText" rows="20" cols="80" spellcheck="false" autocomplete="off" autocapitalize="off" tabindex="0"></textarea>
+    <div id="basicEditor" class="CodeMirror"></div>
     <br /> 
     <input id="autoCompileInput" type="checkbox" title="automatic compile" checked>
     <label for="autoCompileInput" title="auto compile on change">Auto</label>
@@ -21,9 +21,9 @@
   </div>
 
   <div id="compiledArea" class="flexBox">
-    <label for="compiledText" title="Compiled Script">Compiled</label>
+    <label for="compiledEditor" title="Compiled Script">JavaScript</label>
     <br />
-    <textarea id="compiledText" rows="20" cols="80" spellcheck="false" autocomplete="off" autocapitalize="off" tabindex="0"></textarea>
+    <div id="compiledEditor" class="CodeMirror"></div>
     <br />
     <input id="autoExecuteInput" type="checkbox" title="automatic execute" checked>
     <label for="autoExecuteInput" title="auto execute on change">Auto</label>
@@ -35,14 +35,17 @@
     <label for="outputText" title="output">Output</label>
     <br />
     <pre id="outputText" contenteditable="true" spellcheck="false" autocomplete="off" autocapitalize="off" style="overflow:auto; width: 604px; height: 30em; margin: 0px; background-color: #ffffff"></pre>
-    <!-- <textarea id="outputText" rows="25" cols="80" spellcheck="false" autocomplete="off" autocapitalize="off" tabindex="0"></textarea> -->
   </div>
 
   <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.js"></script>
-  <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/mode/javascript/javascript.min.js"></script>
+  <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/mode/javascript/javascript.min.js" defer></script>
+  <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/addon/search/search.min.js" defer></script>
+  <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/addon/search/searchcursor.min.js" defer></script>
+  <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/addon/dialog/dialog.min.js" defer></script>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.css"></link>
-
-  <script src="https://unpkg.com/ohm-js@17/dist/ohm.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/addon/dialog/dialog.css"></link>
+  
+  <script src="https://unpkg.com/ohm-js@17/dist/ohm.min.js"></script>
 
   <script>
     if (!window.ohm) {
