--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
   <link rel="stylesheet" href="locobasic.css">
   <link rel="icon" href="favicon.ico">
-  <title>LocoBasic v0.5.9</title>
+  <title>LocoBasic v0.5.13</title>
 </head>
 
 <body>
@@ -58,8 +58,10 @@
       </span>
       <select id="databaseSelect" title="Database"></select>
       <select id="exampleSelect" title="Example"></select>
-      <input id="exampleSearchInput" title="Search Example" type="text" size="12" placeholder="Search">
-      <button id="exampleSearchClearButton" title="Clear search">&times;</button>
+      <span>
+        <input id="exampleSearchInput" title="Search Example" type="text" size="12" placeholder="Search">
+        <button id="exampleSearchClearButton" title="Clear search">&times;</button>
+      </span>
     </div>
     <div id="outputArea" class="contentArea">
       <div id="outputText" tabindex="0"></div>
